tests/negative/missing_import.ax
module missing_import;

import does.not.exist;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return 0;
}
